@@ -79,7 +79,8 @@ WFST::WFST(WFST &a, WFST &b, bool namedStates, bool preserveGroups) : ownerInOut
               triDest.aState = (*l)->dest;
               in = (*l)->in;
               COMPOSEARC;
-              if ( (group = (*l)->groupId) >= 0)
+			  //!danger: should probably use IsTiedOrLocked() in Arc.h.
+              if ( (group = (*l)->groupId) >= 0 )
                 states[sourceState].arcs.top().groupId = group;
             }
           }
@@ -360,7 +361,7 @@ WFST::WFST(WFST &a, WFST &b, bool namedStates, bool preserveGroups) : ownerInOut
     for ( i = 0 ; i < 3 ; ++i )
       if ( pFinal[i] ) {
         states[*pFinal[i]].addArc(Arc(EMPTY, EMPTY, final, 1.0));
-        states[*pFinal[i]].arcs.top().groupId = 0; // prevent weight from changing in training
+		states[*pFinal[i]].arcs.top().groupId = WFST::LOCKEDGROUP; // prevent weight from changing in training
       }
   }
   states.resize(states.count());
